Rework file handling in the storages